# serialio.cc

./: CMakeLists.txt  README.md
include/stream/: serialstreamer.hpp
src/stream/: serialstreamer.cc
tests/: serialtest.cc
